# ssn

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/ssn/: ast.py  example_builder.py  exceptions.py  registry.py  visitor.py
src/ssn/loader/: loader.py  types.py
src/ssn/resolver/: resolver.py
